# sqr

./: .gitignore  Cargo.lock.license  Cargo.toml  LICENSE  TODO  build.rs  codecov.yml
.github/workflows/: rust.yml
.reuse/: dep5
src/: ast.rs  cli.rs  error.rs  fieldcall.rs  filter.rs  lexer.rs  lib.rs  main.rs  parser.rs  primitive.rs  results.rs  schema.rs  sqvalue.rs  system.rs  test_util.rs  util.rs
src/filter/: comparison.rs  identity.rs  index.rs  slice.rs  test_util.rs
src/system/: schema.full.json  schema.json  schema.json.license  sqbool.rs  sqdatasize.rs  sqduration.rs  sqfile.rs  sqfilemode.rs  sqfilesystem.rs  sqfloat.rs  sqgroup.rs  sqint.rs  sqosstring.rs  sqpath.rs  sqroot.rs  sqstring.rs  sqsystemtime.rs  squser.rs
tests/: comparison_filter.rs  errors.rs  sqbool.rs  sqdatasize.rs  sqduration.rs  sqfile.rs  sqfilemode.rs  sqfilesystem.rs  sqint.rs  sqpath.rs  sqroot.rs
tests/integration_test_util/: mod.rs
