# SPDX-FileCopyrightText: 2023 Jonathan Haigh <jonathanhaigh@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "sqr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features=["derive"] }
erased-serde = "0.3.25"
fancy-regex = "0.11.0"
itertools = "0.10.5"
miette = { version = "5.5.0", features=["fancy"] }
nix = { version = "0.26", features=["fs"] }
once_cell = "1.17.1"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"
walkdir = "2.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
slyce = "0.3.1"
strum = "0.24"
strum_macros = "0.24"

[build-dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
map-macro = "0.2"
phf = { version = "0.11", features = ["macros"] }
prettyplease = "0.1.25"
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0.109"
